fix: align center

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,7 +6,7 @@
 }
 
 .post-list-item {
-  margin: auto;
+  text-align: center;
 }
 
 .post-list-item h2 {
